<resources>
    <string name="app_name">SportSkuy</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="selamat_datang">Selamat Datang,</string>
    <string name="sdmasuk">Masuk.</string>
    <string name="lupa_password">Lupa Password?</string>
    <string name="daftar">Daftar.</string>
    <string name="RgMasuk">Masuk Sekarang!</string>
    <string name="sudah_punya_akun">Sudah punya akun?</string>
    <string name="phone_number">Phone Number</string>
    <string name="daftar2">Daftar</string>
    <string name="daftar_sekarang">Daftar Sekarang!</string>
    <string name="belum_punya_akun">Belum punya akun?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sportskuy">SportSkuy</string>
    <string name="kamu_pengen_olahraga_apa_nih">Kamu pengen olahraga apa nih?</string>
    <string name="beranda_selamat_datang">Selamat datang!</string>
    <string name="futsal">Futsal.</string>
    <string name="basket">Basket.</string>
    <string name="string_basket" />
    <string name="badminton">Badminton.</string>
    <string name="string_badminton" />
    <string name="cari_tempat_olahraga_favoritmu">Cari tempat olahraga favoritmu!</string>
    <string name="olahraga_lainnya">Olahraga Lainnya.</string>
    <string name="navigationpane">NavigationPane</string>
    <string name="pp">PP</string>
    <string name="todo">TODO</string>
    <string name="mulawarman_futsal_court">Mulawarman Futsal Court</string>
    <string name="semarang">Semarang</string>
    <string name="tersedia_makanan_minuman"><![CDATA[Tersedia Makanan & Minuman]]></string>
    <string name="booking_sekarang">Booking Sekarang!</string>
    <string name="_30_000">30.000</string>
    <string name="jam">/jam</string>
    <string name="rp">Rp.</string>
    <string name="masuk">MASUK</string>
    <string name="daftar3">DAFTAR</string>
    <string name="alfa_surya_saputra">Alfa Surya Saputra</string>
    <string name="bantuan">Bantuan</string>
    <string name="akun_saya">Akun Saya</string>
    <string name="notifikasi">Notifikasi</string>
    <string name="tentang_kami">Tentang Kami</string>
    <string name="keluar">Keluar</string>
    <string name="e_mail">E-mail</string>
    <string name="kamu">Kamu</string>
    <string name="beranda">Beranda</string>
    <string name="favorit">Favorit</string>
    <string name="booking">Booking</string>
    <string name="setelan">Setelan</string>
    <string name="tempat_olahraga">Tempat Olahraga</string>
    <string name="dimana">Dimana?</string>
    <string name="nama_tempat">Nama Tempat</string>
    <string name="cek_lokasi">Cek Lokasi . . .</string>
    <string name="olahraga">Olahraga</string>
    <string name="cek_sekarang">Cek Sekarang!</string>
    <string name="harga_terendah">Harga Terendah</string>
    <string name="filter_saya">Filter Saya</string>
    <string name="check_booking">Check Booking</string>
    <string name="check">Check</string>
    <string name="book">Book</string>
    <string name="confirm">Confirm</string>
    <string name="dd_mm_yyyy">DD/MM/YYYY</string>
    <string name="periksa_jadwal">Periksa Jadwal</string>
    <string name="kamu_belum_mengatur_tanggal">Kamu belum mengatur tanggal!</string>
    <string name="apa_kamu_sudah_menentukan">Apa kamu sudah menentukan</string>
    <string name="kapan_mau_main">kapan mau main?</string>
    <string name="sudah_dipesan">Sudah dipesan</string>
    <string name="atur_jadwal_anda">Atur Jadwal Anda</string>
    <string name="atas_nama">Atas Nama</string>
    <string name="no_hp">No. HP</string>
    <string name="durasi">Durasi</string>
    <string name="biaya_sewa">Biaya Sewa</string>
    <string name="alfa">Alfa</string>
    <string name="_08123456789">08123456789</string>
    <string name="_120_menit">120 Menit</string>
    <string name="rp_30_000">Rp. 30.000</string>
    <string name="book_sekarang">BOOK SEKARANG!</string>
    <string name="mulawarman">Mulawarman</string>
    <string name="text2">Lokasi : Jl.Mulawarman Biaya Perjam : Rp.10.000</string>
    <string name="unfinished_favorite_tablayout">Unfinished Favorite TabLayout</string>
    <string name="booking_saya">Booking Saya</string>
    <string name="unfinished_booking_layout">unfinished booking layout</string>
</resources>