<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgbooking"
    android:orientation="vertical"
    tools:context=".fragments.BookActivity">

    <ImageView
        android:id="@+id/back_book"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:contentDescription="@string/todo"
        android:focusable="true"
        android:onClick="booktosearchres"
        android:src="@drawable/ic_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.092"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.043"
        tools:ignore="OnClick" />

    <TextView
        android:id="@+id/tv_checkbooking"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:fontFamily="sans-serif"
        android:text="@string/check_booking"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/back_book"
        app:layout_constraintStart_toEndOf="@+id/back_book"
        app:layout_constraintTop_toTopOf="@+id/back_book"
        app:layout_constraintVertical_bias="1.0" />


    <LinearLayout
        android:id="@+id/cv_bookproc"
        android:layout_width="300dp"
        android:layout_height="35dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/btn_radiusbg6checkbook"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_checkbooking">

        <TextView
            android:id="@+id/tv_bookproc1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="8dp"
            android:background="#2DFFFFFF"
            android:backgroundTint="#2DFFFFFF"
            android:fontFamily="sans-serif"
            android:text="@string/check"
            android:textColor="@color/white"
            android:textSize="13sp" />

        <View
            android:id="@+id/div_bookproc1"
            android:layout_width="50dp"
            android:layout_height="1dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="17dp"
            android:background="@color/white" />

        <TextView
            android:id="@+id/tv_bookproc2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="8dp"
            android:background="#2DFFFFFF"
            android:backgroundTint="#2DFFFFFF"
            android:fontFamily="sans-serif"
            android:text="@string/book"
            android:textColor="@color/white"
            android:textSize="13sp" />


        <View
            android:layout_width="45dp"
            android:layout_height="1dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="17dp"
            android:background="@color/white" />

        <TextView
            android:id="@+id/tv_bookproc3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="8dp"
            android:background="#2DFFFFFF"
            android:backgroundTint="#2DFFFFFF"
            android:fontFamily="sans-serif"
            android:text="@string/confirm"
            android:textColor="@color/white"
            android:textSize="13sp" />
    </LinearLayout>


    <androidx.cardview.widget.CardView
        android:id="@+id/btn_timePicker"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cv_bookproc">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:layout_marginTop="13dp"
            android:background="@drawable/ic_baseline_search_24"
            android:src="@drawable/ic_search36dp"
            app:tint="#00000000" />

        <TextView
            android:id="@+id/tv_datebefore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="95dp"
            android:layout_marginTop="15dp"
            android:text="@string/periksa_jadwal"
            android:textSize="19sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="95dp"
            android:layout_marginTop="14dp"
            android:textSize="22sp"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/layout_checkbook"
        android:layout_width="300dp"
        android:layout_height="500dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_radiusbg6checkbook2"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_timePicker"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:id="@+id/layout_checkbook2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/btn_radiusbg6checkbook2"
            android:orientation="vertical"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_timePicker">


            <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginStart="45dp"
                android:layout_marginTop="90dp"
                android:scaleType="centerInside"
                android:src="@drawable/bg_checkbook" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="55dp"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/kamu_belum_mengatur_tanggal"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="75dp"
                android:fontFamily="sans-serif"
                android:text="@string/apa_kamu_sudah_menentukan"
                android:textSize="12sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="105dp"
                android:fontFamily="sans-serif"
                android:text="@string/kapan_mau_main"
                android:textSize="12sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_checkbook3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/btn_radiusbg6checkbook2"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="25dp"
                android:text="@string/sudah_dipesan"
                android:textSize="16sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="250dp"
                android:layout_height="117dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="15dp"
                android:orientation="horizontal" />

            <View
                android:id="@+id/divider"
                android:layout_width="250dp"
                android:layout_height="0.5dp"
                android:layout_marginStart="25dp"
                android:background="#1e1e1e" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="20dp"
                android:text="@string/atur_jadwal_anda"
                android:textSize="16sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="255dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="15dp">

                <LinearLayout
                    android:id="@+id/btn_jampertama"
                    android:layout_width="98dp"
                    android:layout_height="30dp"
                    android:background="@drawable/btn_radiusbg6checkbook3jam"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_cb1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="35dp"
                        android:layout_marginTop="3dp"
                        android:textStyle="bold"
                        android:textColor="@color/white" />
                </LinearLayout>

                <View
                    android:layout_width="15dp"
                    android:layout_height="1dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="20dp"
                    android:background="#1e1e1e" />

                <LinearLayout
                    android:id="@+id/btn_jamkedua"
                    android:layout_width="98dp"
                    android:layout_height="30dp"
                    android:background="@drawable/btn_radiusbg6checkbook3jam"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_cb2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="35dp"
                        android:layout_marginTop="3dp"
                        android:textStyle="bold"
                        android:textColor="@color/white" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="255dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="15dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginEnd="2dp"
                    android:background="@drawable/btn_radiusbg6checkbook3jam"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_cb3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="35dp"
                        android:textColor="@color/white" />
                </LinearLayout>
            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="15dp">

                <TextView
                    android:id="@+id/tv_cbatasnama2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/alfa"
                    android:textColor="#1e1e1e"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_cbnohp2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_08123456789"
                    android:textColor="#1e1e1e"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_cbatasnama" />

                <TextView
                    android:id="@+id/tv_cbdurasi2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_120_menit"
                    android:textColor="#1e1e1e"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_cbnohp" />

                <TextView
                    android:id="@+id/tv_cbbiaya2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rp_30_000"
                    android:textColor="#1e1e1e"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_cbdurasi" />

                <TextView
                    android:id="@+id/tv_cbatasnama"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/atas_nama"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_cbnohp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no_hp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_cbatasnama" />

                <TextView
                    android:id="@+id/tv_cbdurasi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/durasi"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_cbnohp" />

                <TextView
                    android:id="@+id/tv_cbbiaya"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/biaya_sewa"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_cbdurasi" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:id="@+id/div_bookproc2"
                android:layout_width="250dp"
                android:layout_height="0.5dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="20dp"
                android:background="#1e1e1e" />

            <LinearLayout
                android:layout_width="250dp"
                android:layout_height="30dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="20dp"
                android:onClick="backtoberandafrombooking"
                android:background="@drawable/btn_radiusbg6checkbook3jam"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="75dp"
                    android:layout_marginTop="6dp"
                    android:text="@string/book_sekarang"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>