<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.Test1Fragment"
    android:background="@color/white">

    <androidx.cardview.widget.CardView
        android:id="@+id/profileberanda"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:cardCornerRadius="64dp"
        app:layout_constraintBottom_toTopOf="@+id/etSearch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.789"
        app:layout_constraintStart_toEndOf="@+id/usernameBeranda"
        app:layout_constraintTop_toTopOf="@+id/usernameBeranda"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:id="@+id/profileberanda2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/pp"
            android:scaleType="centerCrop"
            android:src="@drawable/buramr8cyaaju_8" />


    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tvLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/sportskuy"
        android:textColor="#000000"
        android:textSize="26sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/usernameBeranda"
        app:layout_constraintTop_toBottomOf="@+id/usernameBeranda" />

    <TextView
        android:id="@+id/tvBerandaSelamat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="sans-serif"
        android:text="@string/beranda_selamat_datang"
        android:textColor="#000000"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="@+id/tvLogo"
        app:layout_constraintHorizontal_bias="0.076"
        app:layout_constraintStart_toStartOf="@+id/tvLogo"
        app:layout_constraintTop_toBottomOf="@+id/tvLogo" />

    <TextView
        android:id="@+id/tvBerandaSelamat2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:text="@string/kamu_pengen_olahraga_apa_nih"
        android:textColor="#000000"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="@+id/tvBerandaSelamat"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tvBerandaSelamat"
        app:layout_constraintTop_toBottomOf="@+id/tvBerandaSelamat" />

    <Button
        android:id="@+id/btnBdFutsal"
        android:layout_width="290dp"
        android:layout_height="70dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/btn_radiusbg2"
        android:fontFamily="sans-serif-black"
        android:text="@string/futsal"
        android:textAlignment="textEnd"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        android:clickable="true"
        android:onClick="berandatofutsal"
        android:longClickable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etSearch" />

    <Button
        android:id="@+id/btnBdBasket"
        android:layout_width="290dp"
        android:layout_height="70dp"
        android:layout_marginTop="18dp"
        android:background="@drawable/btn_radiusbg2"
        android:backgroundTint="@color/colorPrimaryDark"
        android:fontFamily="sans-serif-black"
        android:text="@string/basket"
        android:textAlignment="textEnd"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="@+id/btnBdFutsal"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/btnBdFutsal"
        app:layout_constraintTop_toBottomOf="@+id/btnBdFutsal" />

    <Button
        android:id="@+id/btnBdBadminton"
        android:layout_width="290dp"
        android:layout_height="70dp"
        android:layout_marginTop="18dp"
        android:background="@drawable/btn_radiusbg2"
        android:backgroundTint="@color/colorPrimaryDark"
        android:fontFamily="sans-serif-black"
        android:text="@string/badminton"
        android:textAlignment="textEnd"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="@+id/btnBdBasket"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btnBdBasket"
        app:layout_constraintTop_toBottomOf="@+id/btnBdBasket" />

    <Button
        android:id="@+id/btnBdOlahragaLainnya"
        android:layout_width="290dp"
        android:layout_height="70dp"
        android:layout_marginTop="18dp"
        android:background="@drawable/btn_radiusbg2"
        android:fontFamily="sans-serif-black"
        android:text="@string/olahraga_lainnya"
        android:textAlignment="textEnd"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btnBdBadminton"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btnBdBadminton"
        app:layout_constraintTop_toBottomOf="@+id/btnBdBadminton"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/etSearch"
        android:layout_width="290dp"
        android:layout_height="60dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="#eff1fe"
        android:drawableEnd="@drawable/ic_search"
        android:searchIcon="@drawable/ic_search"
        android:text="@string/cari_tempat_olahraga_favoritmu"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textColor="@color/hint"
        android:textSize="12sp"
        android:textStyle="italic"
        android:onClick="berandatosearch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tvBerandaSelamat2"
        app:layout_constraintTop_toBottomOf="@+id/tvBerandaSelamat2" />

    <androidx.cardview.widget.CardView
        android:id="@+id/usernameBeranda"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="36dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.113"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/navdrawer"/>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>